@@ -3,7 +3,7 @@
 @if "%~1"=="" goto skip
 
 @pushd %~dp0
-python\python.exe src\main.py "%~1" --mode=check
+python\python.exe src\main.py "%~1" --mode=check --save_detected_version
 @popd
 
 pause
